Add a get comments lambda function
